This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - Panorama View:
            - added -or filter to all filter panels
            - added optional min/max values for speedometer
            - added invert switch for speedometer
          - Bug Fixes
            - fixed pnp source not selectable anymore after revisiting panel settings
            - fixed applying panel source

1.84-4   Mon Jun 23 17:44:32 CEST 2014
          - added show_error_reports mode 'both' which shows the error indicator but logs to server side
          - set default show_error_reports mode to 'both' to make error handling easier
          - support pnp urls with suffix
          - Panorama View:
            - added z-index option for icons
          - Bug Fixes
            - fixed rendering icons above dashboard settings window
            - fixed recurring downtimes not beeing saved under some conditions with multiple backends
            - fixed problem in servicegroup recurring downtimes
            - fixed half-visible panorama buttons in IE11
            - fixed panorama shape rotation in IE11
            - fixed panorama column error in minemap
            - fixed problem with utf8 characters in passwords
            - fixed problem with quotes in passwords

1.84-3   Sat May 31 16:10:07 CEST 2014
          - added csrf_allowed_hosts configuration option
          - allow unicode characters in performance data units
          - Panorama View:
            - iconsets may now contain png, jpg or gif images
            - added dashboard_ignore_changes configuration option (Franky Van Liedekerke)
            - reschedule next check when refreshing single icon with host/service
          - Business Process
            - added easier host:* status aggregation
          - Bug Fixes
            - fixed calculation of computed configuration in config tool
            - fixed panorama icon size in IE8