@@ -1642,6 +1642,7 @@ themes/themes-available/Classic/images/status2.gif
 themes/themes-available/Classic/images/status3.gif
 themes/themes-available/Classic/images/status4.gif
 themes/themes-available/Classic/images/stop.gif
+themes/themes-available/Classic/images/stop.png
 themes/themes-available/Classic/images/tacdisabled.png
 themes/themes-available/Classic/images/tacdiverse.png
 themes/themes-available/Classic/images/tacenabled.png
@@ -1803,6 +1804,7 @@ themes/themes-available/Exfoliation/images/status2.gif
 themes/themes-available/Exfoliation/images/status3.gif
 themes/themes-available/Exfoliation/images/status4.gif
 themes/themes-available/Exfoliation/images/stop.gif
+themes/themes-available/Exfoliation/images/stop.png
 themes/themes-available/Exfoliation/images/tacdisabled.png
 themes/themes-available/Exfoliation/images/tacdiverse.png
 themes/themes-available/Exfoliation/images/tacenabled.png
@@ -2016,6 +2018,7 @@ themes/themes-available/Nuvola/images/status2.gif
 themes/themes-available/Nuvola/images/status3.gif
 themes/themes-available/Nuvola/images/status4.gif
 themes/themes-available/Nuvola/images/stop.gif
+themes/themes-available/Nuvola/images/stop.png
 themes/themes-available/Nuvola/images/tacdisabled.png
 themes/themes-available/Nuvola/images/tacdiverse.png
 themes/themes-available/Nuvola/images/tacenabled.png
@@ -2224,6 +2227,7 @@ themes/themes-available/Thruk/images/status2.gif
 themes/themes-available/Thruk/images/status3.gif
 themes/themes-available/Thruk/images/status4.gif
 themes/themes-available/Thruk/images/stop.gif
+themes/themes-available/Thruk/images/stop.png
 themes/themes-available/Thruk/images/tacdisabled.png
 themes/themes-available/Thruk/images/tacdiverse.png
 themes/themes-available/Thruk/images/tacenabled.png
@@ -2371,6 +2375,7 @@ themes/themes-available/Vautour/images/status2.gif
 themes/themes-available/Vautour/images/status3.gif
 themes/themes-available/Vautour/images/status4.gif
 themes/themes-available/Vautour/images/stop.gif
+themes/themes-available/Vautour/images/stop.png
 themes/themes-available/Vautour/images/tacdisabled.png
 themes/themes-available/Vautour/images/tacdiverse.jpg
 themes/themes-available/Vautour/images/tacdiverse.png
@@ -2623,6 +2628,7 @@ themes/themes-available/Wakizashi/images/status2.gif
 themes/themes-available/Wakizashi/images/status3.gif
 themes/themes-available/Wakizashi/images/status4.gif
 themes/themes-available/Wakizashi/images/stop.gif
+themes/themes-available/Wakizashi/images/stop.png
 themes/themes-available/Wakizashi/images/tableshadow.png
 themes/themes-available/Wakizashi/images/tacdisabled.png
 themes/themes-available/Wakizashi/images/tacdiverse.jpg
