@@ -1,0 +1,1 @@
+../../Classic/images/stop.png
